--- a/src/lasen/forget_password.fxml
+++ b/src/lasen/forget_password.fxml
@@ -31,7 +31,7 @@
          </font>
       </Label>
       <TextField fx:id="email" alignment="CENTER" layoutX="35.0" layoutY="333.0" prefHeight="45.0" prefWidth="330.0" promptText="Example@outlook.com" style="-fx-background-radius: 20;" />
-      <Button fx:id="sent_bt" layoutX="77.0" layoutY="411.0" mnemonicParsing="false" onAction="#to_verification_page" onMouseEntered="#enlarge_send_bt" onMouseExited="#minimize_send_bt" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
+      <Button fx:id="sent_bt" layoutX="77.0" layoutY="435.0" mnemonicParsing="false" onAction="#to_verification_page" onMouseEntered="#enlarge_send_bt" onMouseExited="#minimize_send_bt" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
          <font>
             <Font name="Led Italic Font" size="24.0" />
          </font>
@@ -43,10 +43,11 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="#543315" layoutX="118.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="إرسال" textAlignment="CENTER" wrappingWidth="162.7109375">
+      <Text fill="#543315" layoutX="118.0" layoutY="486.0" strokeType="OUTSIDE" strokeWidth="0.0" text="إرسال" textAlignment="CENTER" wrappingWidth="162.7109375">
          <font>
             <Font name="Led Italic Font" size="24.0" />
          </font>
       </Text>
+      <Label fx:id="label1" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="408.0" prefHeight="38.0" prefWidth="359.0" text="من فضلك قم بإدخال البريد الإلكتروني أولاً" textAlignment="CENTER" textFill="#ff4141" visible="false" wrapText="true" />
    </children>
 </AnchorPane>
