--- a/src/lasen/home_page.fxml
+++ b/src/lasen/home_page.fxml
@@ -149,7 +149,7 @@
                   <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
                </effect>
             </Button>
-            <Slider fx:id="music_slider" layoutX="102.0" layoutY="229.0" prefHeight="62.0" prefWidth="238.0" />
+            <Slider fx:id="music_slider" layoutX="102.0" layoutY="229.0" prefHeight="62.0" prefWidth="238.0" stylesheets="@style.css" />
             <Button layoutX="57.0" layoutY="307.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #FFD08C; -fx-background-radius: 30;">
                <effect>
                   <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
@@ -207,7 +207,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Slider fx:id="sound_slider" layoutX="102.0" layoutY="299.0" prefHeight="62.0" prefWidth="238.0" />
+            <Slider fx:id="sound_slider" layoutX="102.0" layoutY="299.0" prefHeight="62.0" prefWidth="238.0" stylesheets="@style.css" />
          </children>
       </Pane>
    </children>
