--- a/src/lasen/profile_setting.fxml
+++ b/src/lasen/profile_setting.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -24,7 +23,26 @@
             <Image url="@image/س.png" />
          </image>
       </ImageView>
-      <Pane layoutX="18.0" layoutY="101.0" opacity="0.9" prefHeight="546.0" prefWidth="365.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;" />
+      <Pane layoutX="18.0" layoutY="101.0" opacity="0.9" prefHeight="582.0" prefWidth="365.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
+         <children>
+            <Button fx:id="save_bt" layoutX="60.0" layoutY="468.0" mnemonicParsing="false" onAction="#to_home" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
+               <font>
+                  <Font name="Led Italic Font" size="24.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="70.0" fitWidth="322.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/button.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Text fill="#543315" layoutX="101.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="162.7109375">
+               <font>
+                  <Font name="Led Italic Font" size="24.0" />
+               </font>
+            </Text>
+         </children></Pane>
       <Label layoutX="310.0" layoutY="114.0" text="الاسم :" textFill="#543315">
          <font>
             <Font name="Led Italic Font" size="16.0" />
@@ -36,13 +54,13 @@
             <Font name="Led Italic Font" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="email" alignment="CENTER" disable="true" layoutX="35.0" layoutY="235.0" prefHeight="45.0" prefWidth="330.0" promptText="Example@outlook.com" style="-fx-background-radius: 20;" />
+      <TextField fx:id="email" alignment="CENTER" layoutX="35.0" layoutY="235.0" prefHeight="45.0" prefWidth="330.0" promptText="Example@outlook.com" style="-fx-background-radius: 20;" />
       <Label layoutX="314.0" layoutY="279.0" text="العمر :" textFill="#543315">
          <font>
             <Font name="Led Italic Font" size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="age" editable="true" layoutX="260.0" layoutY="318.0" prefHeight="37.0" prefWidth="105.0" promptText="5" visibleRowCount="8" />
+      <TextField fx:id="age" alignment="CENTER" layoutX="263.0" layoutY="318.0" prefHeight="45.0" prefWidth="105.0" promptText="5" style="-fx-background-radius: 20;" />
       <Label layoutX="258.0" layoutY="355.0" text="كلمة المرور :" textFill="#543315">
          <font>
             <Font name="Led Italic Font" size="16.0" />
@@ -77,22 +95,6 @@
             <Image url="@image/unvisibility.png" />
          </image>
       </ImageView>
-      <Button fx:id="save_bt" layoutX="87.0" layoutY="543.0" mnemonicParsing="false" onAction="#to_home" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
-         <font>
-            <Font name="Led Italic Font" size="24.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="70.0" fitWidth="322.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/button.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Text fill="#543315" layoutX="127.0" layoutY="596.0" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="162.7109375">
-         <font>
-            <Font name="Led Italic Font" size="24.0" />
-         </font>
-      </Text>
+      <Label fx:id="label1" alignment="CENTER" contentDisplay="CENTER" layoutX="20.0" layoutY="543.0" prefHeight="38.0" prefWidth="359.0" text="كلمة المرور ليست متطابقة" textAlignment="CENTER" textFill="#ff4141" visible="false" wrapText="true" />
    </children>
 </AnchorPane>
