--- a/src/lasen/sign_up.fxml
+++ b/src/lasen/sign_up.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -42,7 +41,7 @@
             <Font name="Led Italic Font" size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="age" editable="true" layoutX="260.0" layoutY="318.0" prefHeight="37.0" prefWidth="105.0" promptText="5" visibleRowCount="8" />
+      <TextField fx:id="age" alignment="CENTER" layoutX="260.0" layoutY="317.0" prefHeight="45.0" prefWidth="105.0" promptText="5" style="-fx-background-radius: 20;" />
       <Label layoutX="258.0" layoutY="355.0" text="كلمة المرور :" textFill="#543315">
          <font>
             <Font name="Led Italic Font" size="16.0" />
@@ -89,6 +88,7 @@
             </ImageView>
          </graphic>
       </Button>
+      <Label fx:id="label1" alignment="CENTER" contentDisplay="CENTER" layoutX="36.0" layoutY="525.0" prefHeight="25.0" prefWidth="323.0" text="الرجاء تعبئة جميع البيانات" textAlignment="CENTER" textFill="#ff4141" visible="false" />
       <Text fill="#543315" layoutX="127.0" layoutY="596.0" strokeType="OUTSIDE" strokeWidth="0.0" text="إنشاء" textAlignment="CENTER" wrappingWidth="162.7109375">
          <font>
             <Font name="Led Italic Font" size="24.0" />
