--- a/src/lasen/second_level.fxml
+++ b/src/lasen/second_level.fxml
@@ -7,9 +7,10 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -26,7 +27,20 @@
             <Image url="@image/س.png" />
          </image>
       </ImageView>
-      <Pane layoutX="5.0" layoutY="172.0" opacity="0.75" prefHeight="550.0" prefWidth="387.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;" />
+      <Pane layoutX="5.0" layoutY="172.0" prefHeight="485.0" prefWidth="392.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
+         <children>
+            <GridPane fx:id="gameMatrix" hgap="5.0" layoutX="6.0" layoutY="27.0" prefHeight="472.0" prefWidth="385.0" vgap="5.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </children></Pane>
       <Button fx:id="setting" layoutX="308.0" layoutY="-1.0" mnemonicParsing="false" onAction="#to_setting_page" onMouseEntered="#enlarge_setting" onMouseExited="#minimize_setting" prefHeight="70.0" prefWidth="70.0" style="-fx-background-color: transparent;">
          <graphic>
             <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
@@ -79,76 +93,6 @@
             <Font name="Engravers MT" size="24.0" />
          </font>
       </Text>
-      <VBox layoutX="16.0" layoutY="192.0" prefHeight="509.0" prefWidth="379.0">
-         <children>
-            <HBox prefHeight="200.0" prefWidth="307.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
-            <HBox prefHeight="200.0" prefWidth="307.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
-            <HBox prefHeight="200.0" prefWidth="307.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="300.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/background.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
       <Pane fx:id="pop_wind" prefHeight="800.0" prefWidth="400.0" visible="false">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#543315" height="800.0" opacity="0.5" stroke="#543315" strokeType="INSIDE" width="400.0" />
