--- a/src/lasen/home_page.fxml
+++ b/src/lasen/home_page.fxml
@@ -144,28 +144,28 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #FFD08C; -fx-background-radius: 30;">
+            <Button layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #81a2ab; -fx-background-radius: 30;">
                <effect>
-                  <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
+                  <DropShadow color="#81a2abb8" height="21.52" radius="10.39" width="22.04" />
                </effect>
             </Button>
-            <Slider fx:id="music_slider" layoutX="102.0" layoutY="229.0" prefHeight="62.0" prefWidth="238.0" value="50.0" />
-            <Button layoutX="57.0" layoutY="307.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #FFD08C; -fx-background-radius: 30;">
+            <Slider fx:id="music_slider" layoutX="101.0" layoutY="229.0" onMouseReleased="#change_music_img" prefHeight="62.0" prefWidth="235.0" stylesheets="@style.css" value="100.0" />
+            <Button layoutX="57.0" layoutY="307.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #81a2ab; -fx-background-radius: 30;">
                <effect>
-                  <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
+                  <DropShadow color="#81a2abb8" height="21.52" radius="10.39" width="22.04" />
                </effect>
             </Button>
             <Button fx:id="profile" layoutX="57.0" layoutY="377.0" mnemonicParsing="false" onAction="#to_profile" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #FFD08C; -fx-background-radius: 30;" text="الصفحة الشخصية" textFill="#543315">
                <effect>
-                  <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
+                  <DropShadow color="#ffcf8cb7" height="21.91" radius="10.4875" width="22.04" />
                </effect>
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="sign_out" layoutX="57.0" layoutY="447.0" mnemonicParsing="false" onAction="#to_sign_in" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #FFD08C; -fx-background-radius: 30;" text="تسجيل خروج" textFill="#543315">
+            <Button fx:id="sign_out" layoutX="57.0" layoutY="447.0" mnemonicParsing="false" onAction="#to_sign_in" prefHeight="45.0" prefWidth="287.0" style="-fx-background-color: #81a2ab; -fx-background-radius: 30;" text="تسجيل خروج" textFill="#543315">
                <effect>
-                  <DropShadow color="#ffcf8cb7" radius="10.26" width="22.04" />
+                  <DropShadow color="#81a2abb8" height="21.78" radius="10.455" width="22.04" />
                </effect>
                <font>
                   <Font name="System Bold" size="16.0" />
@@ -191,23 +191,23 @@
             </Button>
             <Button layoutX="38.0" layoutY="299.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;">
                <graphic>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="sound_img" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/blocked_sound.png" />
+                        <Image url="@image/sound2.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
             <Button layoutX="38.0" layoutY="229.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;">
                <graphic>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="music_img" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/blocked_music.png" />
+                        <Image url="@image/music2.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Slider fx:id="sound_slider" layoutX="102.0" layoutY="299.0" prefHeight="62.0" prefWidth="238.0" value="50.0" />
+            <Slider fx:id="sound_slider" layoutX="101.0" layoutY="299.0" onMouseReleased="#change_sound_img" prefHeight="62.0" prefWidth="235.0" stylesheets="@style.css" value="100.0" />
          </children>
       </Pane>
    </children>
