--- a/src/lasen/second_level.fxml
+++ b/src/lasen/second_level.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.DropShadow?>
@@ -27,20 +28,26 @@
             <Image url="@image/س.png" />
          </image>
       </ImageView>
-      <Pane layoutX="5.0" layoutY="172.0" prefHeight="485.0" prefWidth="392.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
+      <Pane layoutX="11.0" layoutY="185.0" prefHeight="472.0" prefWidth="386.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
          <children>
-            <GridPane fx:id="gameMatrix" hgap="5.0" layoutX="6.0" layoutY="27.0" prefHeight="472.0" prefWidth="385.0" vgap="5.0">
+            <GridPane fx:id="gameMatrix" layoutX="21.0" layoutY="27.0" prefHeight="458.0" prefWidth="372.0" vgap="2.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="10.0" prefWidth="191.66668701171875" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.33331298828125" minWidth="10.0" prefWidth="193.33331298828125" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <padding>
+                  <Insets left="2.0" />
+               </padding>
             </GridPane>
-         </children></Pane>
+         </children>
+         <padding>
+            <Insets left="2.0" />
+         </padding></Pane>
       <Button fx:id="setting" layoutX="308.0" layoutY="-1.0" mnemonicParsing="false" onAction="#to_setting_page" onMouseEntered="#enlarge_setting" onMouseExited="#minimize_setting" prefHeight="70.0" prefWidth="70.0" style="-fx-background-color: transparent;">
          <graphic>
             <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
