--- a/src/lasen/third_level.fxml
+++ b/src/lasen/third_level.fxml
@@ -29,16 +29,16 @@
       </ImageView>
       <Pane layoutX="-1.0" layoutY="174.0" prefHeight="591.0" prefWidth="400.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
          <children>
-            <GridPane fx:id="gameMatrix" layoutX="2.0" layoutY="2.0" prefHeight="567.0" prefWidth="414.0">
+            <GridPane fx:id="gameMatrix" layoutX="41.0" layoutY="-3.0" prefHeight="499.0" prefWidth="347.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
          </children></Pane>
