--- a/src/lasen/reset_password.fxml
+++ b/src/lasen/reset_password.fxml
@@ -59,7 +59,7 @@
                   <Image url="@image/unvisibility.png" />
                </image>
             </ImageView>
-            <Button fx:id="save_bt" layoutX="69.0" layoutY="335.0" mnemonicParsing="false" onAction="#to_sign_in" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
+            <Button fx:id="save_bt" layoutX="69.0" layoutY="335.0" mnemonicParsing="false" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
                <font>
                   <Font name="Led Italic Font" size="24.0" />
                </font>
@@ -72,9 +72,9 @@
                </graphic>
             </Button>
             <Label fx:id="label1" alignment="CENTER" contentDisplay="CENTER" layoutX="18.0" layoutY="317.0" prefHeight="25.0" prefWidth="323.0" text="كلمة المرور ليست متطابقة" textAlignment="CENTER" textFill="#ff4141" visible="false" />
-            <Text fill="#543315" layoutX="109.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="162.7109375">
+            <Text fill="#543315" layoutX="89.0" layoutY="389.0" onMouseClicked="#reset" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="206.7109375">
                <font>
-                  <Font name="Led Italic Font" size="24.0" />
+                  <Font name="Led Italic Font" size="28.0" />
                </font>
             </Text>
          </children></Pane>
