--- a/src/lasen/profile_setting.fxml
+++ b/src/lasen/profile_setting.fxml
@@ -25,7 +25,7 @@
       </ImageView>
       <Pane layoutX="18.0" layoutY="101.0" opacity="0.9" prefHeight="582.0" prefWidth="365.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
          <children>
-            <Button fx:id="save_bt" layoutX="60.0" layoutY="468.0" mnemonicParsing="false" onAction="#to_home" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
+            <Button fx:id="save_bt" layoutX="60.0" layoutY="468.0" mnemonicParsing="false" onMouseEntered="#enlarge_save" onMouseExited="#minimize_save" prefHeight="70.0" prefWidth="160.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="#543315">
                <font>
                   <Font name="Led Italic Font" size="24.0" />
                </font>
@@ -37,9 +37,9 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Text fill="#543315" layoutX="101.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="162.7109375">
+            <Text fill="#543315" layoutX="79.0" layoutY="523.0" onMouseClicked="#save" strokeType="OUTSIDE" strokeWidth="0.0" text="حفظ" textAlignment="CENTER" wrappingWidth="208.7109375">
                <font>
-                  <Font name="Led Italic Font" size="24.0" />
+                  <Font name="Led Italic Font" size="28.0" />
                </font>
             </Text>
          </children></Pane>
