--- a/src/lasen/third_level.fxml
+++ b/src/lasen/third_level.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.DropShadow?>
@@ -7,10 +8,10 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -27,20 +28,49 @@
             <Image url="@image/س.png" />
          </image>
       </ImageView>
-      <Pane layoutX="-1.0" layoutY="174.0" prefHeight="591.0" prefWidth="400.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
+      <Pane layoutX="-1.0" layoutY="174.0" opacity="0.96" prefHeight="617.0" prefWidth="400.0" style="-fx-background-color: #ffff; -fx-background-radius: 30;">
          <children>
-            <GridPane fx:id="gameMatrix" layoutX="41.0" layoutY="-3.0" prefHeight="499.0" prefWidth="347.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
+            <VBox layoutX="8.0" prefHeight="595.0" prefWidth="388.0" style="-fx-background-color: transparent;">
+               <children>
+                  <HBox prefHeight="168.0" prefWidth="365.0" spacing="20.0">
+                     <children>
+                        <Button fx:id="button0" mnemonicParsing="false" onAction="#buttonClickedCard" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;">
+                           <opaqueInsets>
+                              <Insets top="5.0" />
+                           </opaqueInsets>
+                        </Button>
+                        <Button fx:id="button1" mnemonicParsing="false" onAction="#buttonClickedCard" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets top="50.0" />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox prefHeight="168.0" prefWidth="365.0" spacing="20.0">
+                     <children>
+                        <Button fx:id="button2" mnemonicParsing="false" onAction="#buttonClickedCard" opacity="0.9" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                        <Button fx:id="button3" mnemonicParsing="false" onAction="#buttonClickedCard" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="168.0" prefWidth="365.0" spacing="20.0">
+                     <children>
+                        <Button fx:id="button4" mnemonicParsing="false" onAction="#buttonClickedCard" opacity="0.9" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                        <Button fx:id="button5" mnemonicParsing="false" onAction="#buttonClickedCard" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="145.0" prefWidth="364.0" spacing="20.0">
+                     <children>
+                        <Button fx:id="button6" mnemonicParsing="false" onAction="#buttonClickedCard" opacity="0.9" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                        <Button fx:id="button7" mnemonicParsing="false" onAction="#buttonClickedCard" prefHeight="140.0" prefWidth="160.0" style="-fx-background-color: transparent;" />
+                     </children>
+                  </HBox>
+               </children>
+               <opaqueInsets>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </opaqueInsets>
+            </VBox>
          </children></Pane>
       <Button fx:id="setting" layoutX="308.0" layoutY="-1.0" mnemonicParsing="false" onAction="#to_setting_page" onMouseEntered="#enlarge_setting" onMouseExited="#minimize_setting" prefHeight="70.0" prefWidth="70.0" style="-fx-background-color: transparent;">
          <graphic>
@@ -60,7 +90,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="dimonds" layoutX="-5.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="-5.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Engravers MT" size="24.0" />
          </font>
@@ -72,12 +102,12 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="WHITE" layoutX="14.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="59.999998189508915">
+      <Text fx:id="dimonds" fill="WHITE" layoutX="17.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="59.999998189508915">
          <font>
             <Font name="Engravers MT" size="24.0" />
          </font>
       </Text>
-      <Button fx:id="coins" layoutX="-5.0" layoutY="82.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="-5.0" layoutY="82.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Engravers MT" size="24.0" />
          </font>
@@ -89,11 +119,54 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="WHITE" layoutX="16.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5" textAlignment="CENTER" wrappingWidth="59.999998189508915">
+      <Text fx:id="coins" fill="WHITE" layoutX="17.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="59.999998189508915">
          <font>
             <Font name="Engravers MT" size="24.0" />
          </font>
       </Text>
+      <Pane fx:id="record_pan" layoutX="14.0" layoutY="250.0" opacity="0.95" prefHeight="398.0" prefWidth="372.0" style="-fx-background-color: #ffff; -fx-background-radius: 20;" visible="false">
+         <children>
+            <ImageView fitHeight="366.0" fitWidth="372.0" layoutX="4.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/background2.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="image_recod_pane" fitHeight="250.0" fitWidth="290.0" layoutX="46.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+            <Circle fx:id="recording" fill="#dbffbf" layoutX="193.0" layoutY="358.0" radius="41.0" stroke="#543315" strokeType="INSIDE" visible="false" />
+            <Button fx:id="refresh_bt" layoutX="233.0" layoutY="328.0" mnemonicParsing="false" onAction="#refresh_cards" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fx:id="refresh_img" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/unable_refresh.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="get_help_bt" layoutX="70.0" layoutY="328.0" mnemonicParsing="false" onAction="#get_help" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fx:id="get_help_img" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/unable_character.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="micerphone_bt" layoutX="142.0" layoutY="312.0" mnemonicParsing="false" onAction="#record_sound" prefHeight="70.0" prefWidth="70.0" style="-fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/record.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <ImageView fx:id="character" fitHeight="294.0" fitWidth="274.0" layoutX="10.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@image/jump_laf.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
       <Pane fx:id="pop_wind" prefHeight="800.0" prefWidth="400.0" visible="false">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#543315" height="800.0" opacity="0.5" stroke="#543315" strokeType="INSIDE" width="400.0" />
@@ -180,47 +253,6 @@
                </graphic>
             </Button>
             <Slider fx:id="sound_slider" layoutX="101.0" layoutY="299.0" onMouseReleased="#change_sound_img" prefHeight="62.0" prefWidth="235.0" stylesheets="@style.css" value="50.0" />
-         </children>
-      </Pane>
-      <Pane fx:id="record_pan" layoutX="14.0" layoutY="264.0" opacity="0.95" prefHeight="382.0" prefWidth="372.0" style="-fx-background-color: #ffff; -fx-background-radius: 20;" visible="false">
-         <children>
-            <ImageView fitHeight="348.0" fitWidth="357.0" layoutX="7.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/background2.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="refresh_bt" layoutX="227.0" layoutY="311.0" mnemonicParsing="false" onAction="#refresh_cards" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/unable_refresh.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="get_helo_bt" layoutX="66.0" layoutY="311.0" mnemonicParsing="false" onAction="#get_help" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/unable_character.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="micerphone_bt" layoutX="135.0" layoutY="287.0" mnemonicParsing="false" onAction="#record_sound" prefHeight="70.0" prefWidth="70.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/record.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <ImageView fitHeight="294.0" fitWidth="274.0" layoutX="-47.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
-                  <Image url="@image/11.png" />
-               </image>
-            </ImageView>
          </children>
       </Pane>
    </children>
